# CorePulse

./: .gitignore  README.md  advanced_control_examples.py  attention_examples.py  debug_self_attention.py  examples.py  pyproject.toml  sdxl_examples.py  test_unified_single_pass.py
core_pulse/: __init__.py
core_pulse/models/: base.py  unet_patcher.py
core_pulse/prompt_injection/: __init__.py  advanced.py  attention.py  base.py  composition.py  masking.py  multi_scale.py  simple.py  spatial.py  unified.py
core_pulse/utils/: __init__.py  helpers.py
tests/models/: test_unet_patcher.py
tests/prompt_injection/: test_advanced.py  test_attention.py  test_attention_sd15.py  test_composition.py  test_masked_sd15.py  test_multiscale_sd15.py  test_regional_sd15.py  test_self_attention_sd15.py  test_simple_sd15.py  test_spatial.py
